Fix contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,8 @@ nav {
 
 .intxt {
   text-decoration: none;
-  color: #6BA244;
+  color: #2C4D6E;
+  font-weight: bold;
 }
 
 .header-img {
@@ -151,7 +152,7 @@ nav {
 }
 
 #pot1{ background:
-  linear-gradient(to bottom, rgba(0,0,0, 0.5), rgba(107,162,68, 0.6)), 
+  linear-gradient(to bottom, rgba(0,0,0, 0.8), rgba(107,162,68, 0.6)), 
   url('https://source.unsplash.com/2xaF4TbjXT0');
   background-position: top;
 background-size: cover;
@@ -168,7 +169,7 @@ background-size: cover;
 
 #pot3 {
   background:
-  linear-gradient(to bottom, rgba(0,0,0, 0.5), rgba(107,162,68, 0.6)), 
+  linear-gradient(to bottom, rgba(0,0,0, 0.8), rgba(107,162,68, 0.6)), 
   url(/img/chatflx.png);
   background-position: center;
 background-size: cover;
